tests/machine/x/rust/group_by_multi_join.error
line 0: compile: exit status 1
error[E0308]: mismatched types
  --> /workspace/mochi/tests/machine/x/rust/group_by_multi_join.rs:48:356
   |
48 | ...al: sum(&{ let mut tmp4 = Vec::new();for r in &g.clone().items { tmp4.push(r.value); } tmp4 }) }); } result };
   |        --- ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `&[i32]`, found `&Vec<f64>`
   |        |
   |        arguments to this function are incorrect
   |
   = note: expected reference `&[i32]`
              found reference `&Vec<f64>`
note: function defined here
  --> /workspace/mochi/tests/machine/x/rust/group_by_multi_join.rs:39:4
   |
39 | fn sum<T>(v: &[T]) -> T where T: std::iter::Sum<T> + Copy {
   |    ^^^    -------

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.

#[derive(Default, Debug, Clone, PartialEq, Eq, Hash)]